Added:Home home section

--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -1,22 +1,31 @@
 %base-button {
   --background-color: light-dark(#000000, #ffffff);
   --foreground-color: light-dark(#000000, #ffffff);
-  --outline-color: light-dark(#000000, #ffffff);
+  --border-color: light-dark(#000000, #ffffff);
   padding-inline: 1rem;
   padding-block: 0.5rem;
   border-radius: 0.5em;
 
-  outline-style: solid;
-  outline-width: 0.8px;
+  border-style: solid;
+  border-width: 0.8px;
   display: inline-block;
   text-align: center;
   cursor: pointer;
   font-size: var(--medium);
   font-weight: 500;
 
+  outline-width: 4px;
+  outline-style: solid;
+  outline-color: transparent;
+  line-height: 24px;
+
   color: var(--foreground-color);
   background-color: var(--background-color);
-  outline-color: var(--outline-color);
+  border-color: var(--border-color);
+
+  &:focus-visible {
+    outline-color: light-dark(var(--neutral-100), var(--neutral-600));
+  }
 
   @media (prefers-reduced-motion: no-preference) {
     transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);
@@ -27,10 +36,10 @@
   @extend %base-button;
   --background-color: light-dark(var(--neutral-50), var(--primary-900));
   --foreground-color: light-dark(var(--neutral-50), var(--primary-100));
-  --outline-color: light-dark(var(--neutral-50), transparent);
+  --border-color: light-dark(var(--neutral-50), transparent);
 
   &:hover {
-    --background-color: light-dark(var(--neutral-50), var(--neutral-800));
+    --background-color: light-dark(var(--neutral-50), var(--primary-800));
     --foreground-color: light-dark(var(--neutral-50), var(--neutral-50));
   }
 }
@@ -38,7 +47,7 @@
 .btn-filled-secondary {
   @extend %base-button;
   --background-color: light-dark(var(--neutral-50), var(--neutral-900));
-  --outline-color: light-dark(var(--neutral-50), var(--neutral-600));
+  --border-color: light-dark(var(--neutral-50), var(--neutral-600));
   --foreground-color: light-dark(var(--neutral-50), var(--neutral-300));
 
   &:hover {
@@ -51,19 +60,19 @@
   @extend %base-button;
   --background-color: light-dark(transparent, transparent);
   --foreground-color: light-dark(var(--neutral-50), var(--neutral-300));
-  --outline-color: light-dark(var(--neutral-50), var(--neutral-700));
+  --border-color: light-dark(var(--neutral-50), var(--neutral-700));
 
   &:hover {
     --background-color: light-dark(var(--neutral-50), var(--neutral-900));
     --foreground-color: light-dark(var(--neutral-50), var(--neutral-50));
-    --outline-color: light-dark(var(--neutral-50), var(--neutral-500));
+    --border-color: light-dark(var(--neutral-50), var(--neutral-500));
   }
 }
 
 .btn-outlined-secondary {
   @extend %base-button;
   --background-color: light-dark(var(--neutral-50), var(--neutral-900));
-  --outline-color: light-dark(var(--neutral-50), var(--neutral-600));
+  --border-color: light-dark(var(--neutral-50), var(--neutral-600));
   --foreground-color: light-dark(var(--neutral-50), var(--neutral-300));
 
   &:hover {
@@ -71,7 +80,6 @@
     --foreground-color: light-dark(var(--neutral-50), var(--neutral-50));
   }
 }
-
 
 /* Convert them to rem */
 .rounded {
@@ -87,5 +95,3 @@
   padding-inline: 10px;
   padding-block: 10px;
 }
-
-
