--- a/src/styles/config.css
+++ b/src/styles/config.css
@@ -27,6 +27,7 @@
   --x-large: 2rem;
   --xx-large: 3rem;
   --xxx-large: 4rem;
+  --xxxx-large: 4.5rem;
 
   /* Font Family */
   --font-primary: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
