--- a/src/styles/components/container.css
+++ b/src/styles/components/container.css
@@ -1,7 +1,11 @@
-.container-1 {
+%container {
     border-radius: 10px;
     border-color: light-dark(var(--neutral-100), var(--neutral-700));
     border-style: solid;
     border-width: 1px;
+}
+
+.container-1 {
+    @extend %container;
     padding: clamp(10px, 5vw, 30px);
 }
