--- a/src/styles/components/input.css
+++ b/src/styles/components/input.css
@@ -2,7 +2,7 @@ input,
 textarea {
   border: 1px solid light-dark(var(--neutral-100), var(--neutral-700));
   border-radius: 0.5rem;
-  color: light-dark(var(--neutal-100), var(--neutral-300));
+  color: light-dark(var(--neutral-100), var(--neutral-300));
   padding-block: 0.25rem;
   padding-inline: 0.75rem;
   background-color: light-dark(var(--neutral-100), var(--neutral-900));
